feat: team deactivation endpoint
